Adds feature test homework; jockey test isn't working

--- a/app/views/jockeys/show.erb
+++ b/app/views/jockeys/show.erb
@@ -17,5 +17,5 @@
 </table>
 
 <h2>Stats</h2>
-<p>Total Winnings: <%= @jockey.horses.total_winnings %></p>
+<p id='total'>Total Winnings: <%= @jockey.horses.total_winnings %></p>
 <p>Average Winnings: <%= @jockey.horses.average_winnings %></p>
